# TransAI

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  TransAI.qrc  build_install.sh
docs/: architecture.md  front-end-spec.md  prd.md
docs/architecture/: architecture-goals.md  change-log.md  dark-theme-system.md  deployment-strategy.md  index.md  input-optimization.md  monitoring-analytics.md  next-steps.md  overall-architecture.md  performance-optimization.md  security-considerations.md  success-criteria.md  technical-implementation.md  testing-strategy.md  ui-polish.md  word-selection-translation.md
docs/prd/: background-context.md  change-log.md  checklist-results.md  epic-1.md  epic-2.md  epic-3.md  epic-list.md  index.md  next-steps.md  objectives.md  requirements.md  technical-assumptions.md  ui-design-goals.md
docs/qa/gates/: 1.1-dark-theme-implementation.yml  1.2-shuru-kuang-jiaohu-youhua.yml
docs/stories/: 1.1.深色主题系统实现.story.md  1.2.输入框交互优化.story.md  1.3.自动关闭翻译窗口.story.md  2.1.文本选择检测.story.md
qml/: AppView.qml  GRadioButton.qml  GRadioGroup.qml  GTextEdit.qml  IconButton.qml  SettingView.qml  StyledComponent.qml  ThemeColors.qml  main.qml  qmldir
src/: controller.cpp  controller.h  hotkey.cpp  hotkey.h  main.cpp  updater.cpp
src/theme/: ThemeManager.cpp  ThemeManager.h
tests/: CMakeLists.txt  test_thememanager.cpp
